# AI-Backend-developer-projects

./: README.md
AI_Study_Assistant/models/: schemas.py
AI_Study_Assistant/routers/: chat.py
AI_Study_Assistant/services/: ai_service.py
AI_Study_Assistant/services/study_assistant/: README.md  pyproject.toml
AI_Study_Assistant/services/study_assistant/src/study_assistant/: main.py
AI_Study_Assistant/services/study_assistant/src/study_assistant/crews/poem_crew/: poem_crew.py
AI_Study_Assistant/services/study_assistant/src/study_assistant/crews/poem_crew/config/: agents.yaml  tasks.yaml
