[project]
name = "study_assistant"
version = "0.1.0"
description = "study_assistant using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.130.0,<1.0.0",
]

[project.scripts]
kickoff = "study_assistant.main:kickoff"
run_crew = "study_assistant.main:kickoff"
plot = "study_assistant.main:plot"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
